--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,1 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&family=Anton&family=Klee+One&display=swap');
 @import "tailwindcss";
+
+.font-almarai {
+    font-family: 'Almarai', sans-serif;
+}
+
+.font-klee {
+    font-family: 'Klee One', cursive;
+}
+
+.font-anton {
+    font-family: 'Anton', sans-serif;
+}
