--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&family=Anton&family=Klee+One&display=swap');
 @import "tailwindcss";
 
 ::-webkit-scrollbar {
@@ -6,17 +5,17 @@
 }
 
 .font-almarai {
-    font-family: 'Almarai', sans-serif;
+    font-family: var(--font-almarai);
 }
 
 .font-klee {
-    font-family: 'Klee One', cursive;
+    font-family: var(--font-klee);
 }
 
 .font-anton {
-    font-family: 'Anton', sans-serif;
+    font-family: var(--font-anton);
 }
 
 .font-roboto {
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--font-roboto);
 }
